# challenge_mle_cesar_aveleyra

./: pyproject.toml
.github/workflows/: cd.yml  ci.yml  infra.yml
challenge/: api.py  exploration.ipynb  exploration.py  model.py
docs/: challenge.md
infra/: cloudformation.yml  parameters_dev.json  parameters_prod.json
reports/: junit.xml
tests/model/: test_model.py
