
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_base"
version = "0.1.0"
description = "MLE project for challenge "
authors = [
  { name="Cesar Aveleyra", email="caveleyra24@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "polars>=1.6",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "pandas>2.0",
    # APIs
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "mypy>=1.12",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "nbqa>=1.8",
    "types-PyYAML",
    "ipykernel"
]

types = [
    "types-PyYAML",
    "types-requests",
    "types-setuptools",
    # Opcional en caso de usar AWS
    # "boto3-stubs[s3,sts,lambda]"
]

[tool.setuptools.packages.find]
where = ["challenge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
plugins = []

[[tool.mypy.overrides]]
module = ["torch", "torch.*","joblib","sklearn", "sklearn.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=challenge --cov-report=term-missing"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jupytext>=1.19.1",
]
